--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ tokio = { version = "1", features = ["full"] }
 clap = { version = "4", features = ["derive"] }
 base64 = "0.22"
 url = "2.5.0"
+hyper = { version = "1", features = ["full"] }
+http-body-util = "0.1"
+hyper-util = { version = "0.1", features = ["full"] }
+bytes = "1"
+http-body = "1.0"
